--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
