--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,2 @@
-VITE_API_URL=https://api.guardianservices.in
-VITE_API_URL_PASS_MANAGER_CORE=https://auth.guardianservices.in
+VITE_API_URL=https://apigw.guardianservices.in
 VITE_MODE=production
