--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 VITE_API_URL=https://apigw.guardianservices.in
+VITE_API_URL_USER_SERVICE=https://apigw.guardianservices.in/user-service
 VITE_MODE=production
